--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^7.22.5",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.1.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "0.17.1",
