--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.25.0",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/": "react-navigation/native",
+    "@types/axios": "^0.14.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
